--- a/odlicznie.html
+++ b/odlicznie.html
@@ -3,7 +3,7 @@
 <head>
 <style>
     body {
-        background-color: #db9c9c;
+        background-color: #e2c8ce;
     }
     .container {
         display: flex; /* Ustawienie elementów w linii poziomej */
