--- a/stronastrony.html
+++ b/stronastrony.html
@@ -43,7 +43,7 @@
 <div class="a"></div>
 <h1 class="h1"> Autorzy: Sergiusz Sałasiński, Kajetan Wojtyński, Terochin Damian</h1>
 <div class="a"></div>
-<p class="h3"><a href="mailto:hege@example.com">hege@example.com</a></p>
+<p class="h3"><a href="mailto:hege@example.com">niepisz.nieodpisze@gmail.com</a></p>
 </center>
 
 </body>
