--- a/stronastrony.html
+++ b/stronastrony.html
@@ -42,7 +42,7 @@
 
 <div class="a"></div>
 <h1 class="h1"> Autorzy: Sergiusz Sałasiński, Kajetan Wojtyński, Terochin Damian</h1>
-    <p>Języki użyte: HTML, CSS</p>
+    <p class="p">Języki użyte: HTML, CSS</p>
 <div class="a"></div>
 <p class="h3"><a href="mailto:nieodpisze@gmail.com">nieodpisze@gmail.com</a></p>
 </center>
